<resources>
    <string name="application_name">FindMe</string>
    <string name="app_name">FindMe</string>

    <string name="add_missing_person">Add Missing/Lost Person</string>


    <!--Drawer-->
    <string name="terms_of_service">Terms Of Service</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>


    <!--addDetails_Page-->
    <string name="add_upto_5">Add up to 5 Photos</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age (In Years) </string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="nationality">Nationality</string>
    <string name="enter_nationality">Enter Nationality</string>
    <string name="add_more_details">Add More Details</string>
    <string name="add_here">Add More Specific Details</string>
    <string name="height">Height</string>
    <string name="enter_height">Enter Height With Units, e.g., 6.1 ft or 182 cm</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter Weight With Units, e.g, 68 kgs or 150 lbs</string>
    <string name="contact_details">Contact Details</string>
    <string name="enter_contact">Enter Here</string>
    <string name="missing_since">Missing Since</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="personality_type">Personality Type</string>
    <string name="enter_personality_type">Enter Personality Type, e.g., ISTJ, ENFP etc</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_details">Confirm Details</string>


    //confirm page
    <string name="eye_color">Eye Color:</string>
    <string name="height_">Height:</string>
    <string name="weight_">Weight:</string>
    <string name="personality_">Personality Type:</string>
    <string name="missing_since_">Missing Since:</string>
    <string name="published_on_">Published On:</string>
    <string name="contact_detail_">Contact Detail:</string>
    <string name="set_date">Set Date</string>

    <!--Donation addresses-->
    <string name="btc_address_wzr">3CHcXfZqdGDovhcUZcfzZN4RigU9awXS6E</string>
    <string name="btc_address_cb">1C38obdfRT37bNdqRcPHnc15RhQiwauqhX</string>
    <string name="paypal_address">paypal.me/hominian</string>

    <!--Phone Activity-->
    <string name="verify_phone">Verify Phone</string>
    <string name="verify_proceed">Verify and Proceed</string>
    <string name="enter_your_phone">Enter your phone number</string>
    <string name="tap_next">A Verification Code will be send to your Phone\nStandard SMS fees may apply</string>
    <string name="resend_code">Resend code</string>
    <string name="finish">Finish</string>
    <string name="send_code">Send Code</string>
    <string name="auto_otp">Automatically verifying code…</string>
    <string name="waiting_otp">Waiting for code…</string>
    <string name="too_many_tries">Please try again after sometime</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="h_id">H.ID:</string>
    <string name="sign_out_id">Sign Out</string>
    <string name="guest_">Guest</string>
    <string name="sign_fail">Sign In Failed</string>
    <string name="try_again2">Please try again after some time</string>
    <string name="try_again">Try Again</string>
    <string name="e_g_2011">E.g., 2011</string>
    <string name="no_name">No Name</string>
    <string name="eye_color_">Eye Color</string>
    <string name="enter_eye_color">Enter Eye Color</string>
    <string name="details_">Details:</string>
    <string name="next">Next</string>

    <!--Terms Of Service-->
    <string name="terms_conditions">
        As a condition of use, you promise not to use the Service for any purpose that is unlawful or prohibited by these Terms, or any other purpose not reasonably intended by FindMe. By way of example, and not as a limitation, you agree not to use the Service:
        \n\n• To abuse, harass, threaten, impersonate or intimidate any person;
        \n\n• To post or transmit, or cause to be posted or transmitted, any content that is libelous, defamatory, obscene, pornographic, abusive, offensive, profane, or that infringes any copyright or other right of any person;
        \n\n• To communicate FindMe representative or other users in an abusive or offensive manner;
        \n\n• For any purpose (including posting or viewing Content) that is not permitted under the laws of the jurisdiction where you use the Services;
        \n\n• To post or transmit, or cause to be posted or transmitted, any Communication designed or intended to obtain password, account, or private information from any FindMe user;
        \n\n• To create or transmit UNWANTED \'Spam\' to any person or any URL;
        \n\n• To create multiple accounts for the purpose of forgery;
        \n\n• Systematically retrieve data or other content from the Site to create or compile, directly or indirectly, a collection, compilation, database, or directory without written permission from us;
        \n\n• Make any unauthorized use of the Site, including collecting usernames and/or email addresses of users by electronic or other means for the purpose of sending unsolicited email, or creating user accounts by automated means or under false pretenses;
        \n\n• Use the Site to advertise or offer to sell goods and services;
        \n\n• Circumvent, disable, or otherwise interfere with security-related features of the Site, including features that prevent or restrict the use or copying of any Content or enforce limitations on the use of the Site and/or the Content contained therein;
        \n\n• Engage in unauthorized framing of or linking to the Site;
        \n\n• Trick, defraud, or mislead us and other users, especially in any attempt to learn sensitive account information such as user passwords;
        \n\n• Make improper use of our support services or submit false reports of abuse or misconduct;
        \n\n• Engage in any automated use of the system, such as using scripts to send comments or messages, or using any data mining, robots, or similar data gathering and extraction tools;
        \n\n• Interfere with, disrupt, or create an undue burden on the App or the networks or services connected to the App;
        \n\n• Attempt to impersonate another user or person or use the username of another user;
        \n\n• Use any information obtained from the Site in order to harass, abuse, or harm another person;
        \n\n• Use the App as part of any effort to compete with us or otherwise use the App and/or the Content for any revenue-generating endeavor or commercial enterprise;
        \n\n• Decipher, decompile, disassemble, or reverse engineer any of the software comprising or in any way making up a part of the App;
        \n\n• Attempt to bypass any measures of the App designed to prevent or restrict access to the App, or any portion of the Site;
        \n\n• Copy or adapt the App’s software, including but not limited to JAVA, HTML, XML, or other code and APIs;
        \n\n• Upload or transmit (or attempt to upload or to transmit) viruses, Trojan horses, or other material, including excessive use of capital letters and spamming (continuous posting of repetitive text), that interferes with any party’s uninterrupted use and enjoyment of the Site or modifies, impairs, disrupts, alters, or interferes with the use, features, functions, operation, or maintenance of the App;
        \n\n• Disparage, tarnish, or otherwise harm, in our opinion, us and/or the App.


    </string>
    <string name="terms_of_services_u"><u>Terms of Service</u></string>
    <string name="by_clicking_upload">By clicking Upload, you agree to the following:</string>
    <string name="our_">• Our</string>
    <string name="go_back_">Go Back</string>
    <string name="upload_">Upload</string>
    <string name="best_of_my_knowledge">• All the information provided by you is true and correct to the best of your knowledge and belief.</string>
    <string name="note__">Note:</string>
    <string name="tenure_of_27_days">You cannot put down the uploaded information before a successful tenure of 27 days.</string>
    <string name="published_p">Published:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="your_uploads">Your Uploads</string>
    <string name="guest">Guest</string>
    <string name="sign_in_to_see_your_uploads">Sign in to see your Uploads</string>
    <string name="sign_in">Sign In</string>
    <string name="hold_item_for_more_options">Hold item for more options</string>
    <string name="zero_uploads">You have zero uploads</string>
    <string name="total_upl">Total uploads:\t</string>
    <string name="remember_you_cannot_edit_the_name_or_images_field_once_added">Remember: You cannot edit the name or images field once added</string>
    <string name="remember_you_canoot_edit_the_name_or_the_images_after_the_upload">Remember: You cannot edit the name or the images after the upload.</string>
    <string name="millions_of_individuals_go_missing_each_year">Millions of individuals go missing each year.</string>
    <string name="and_among_them_around_8_million_are_children">And among them, around 8 Million are children.</string>
    <string name="one_missing_child_is_one_too_many">One missing child is one too many</string>
    <string name="most_developing_countries">Most developing countries do not have established protocol or central missing child registries making them more difficult to find</string>
    <string name="findme_app_is_an_initiative_to_help_tackle_with_these_problems"><![CDATA[FindMe app is an initiative to help & tackle with these problems]]></string>
    <string name="it_s_a_community_app_where_anybody_can_upload_and_access_the_query_about_lost_missing_individual">It\'s a community app where anybody can upload and access the query about Lost/Missing individual</string>
    <string name="https_www_icmec_org_missing_children_statistics">*https://www.icmec.org/missing-children-statistics/</string>
    <string name="test_ad_app_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_unit_id">ca-app-pub-1577150502173347/9014616132</string>
    <string name="test_device_id">1C5C1B63EA133A75DFA8E368FECEF7D3</string>
    <string name="have_zero_uploads">You have zero uploads</string>
    <string name="admin_">+919717388845</string>
    <string name="your_uploads_tab">\t\tYour Uploads</string>
    <string name="search_">Search</string>
    <string name="logo__">logo</string>
    <string name="drawer_toggle_button">drawer toggle button</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="profile_image">profile image</string>
    <string name="_10">$10</string>
    <string name="_1">$1</string>
    <string name="_5">$5</string>
    <string name="watch_an_amazing_ad">Watch an Amazing Ad!</string>


</resources>
