<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/common_google_signin_btn_icon_light_normal_background">


    <ImageView
        android:id="@+id/f_logo"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/fnme" />

    <TextView
        android:id="@+id/para_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/f_logo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/by_clicking_upload" />

    <TextView
        android:id="@+id/our_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/para_1"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/our_" />

    <TextView
        android:id="@+id/termsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/para_1"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/our_"
        android:layout_toRightOf="@id/our_"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/terms_of_services_u"
        android:textColor="@drawable/text_selector" />

    <TextView
        android:id="@+id/right_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/our_"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/best_of_my_knowledge"

        />

    <TextView
        android:id="@+id/note_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/right_info"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/note__"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/note_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/right_info"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/note_tv"
        android:layout_toRightOf="@id/note_tv"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/tenure_of_27_days" />


    <LinearLayout
        android:id="@+id/progress_horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_text_layout">

        <ProgressBar
            android:id="@+id/progress_h"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="1dp"
            android:visibility="gone" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/error_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_info"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:visibility="gone"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_horizontal_layout"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/flag_transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/go_back_"
            android:textAllCaps="false"
            android:textColor="@drawable/text_selector"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute" />

        <View
            android:id="@+id/upl_left"
            android:layout_width="16dp"
            android:layout_height="2dp"
            android:visibility="invisible"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/flag_transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/upload_"
            android:textAllCaps="false"
            android:textColor="@drawable/text_selector"
            tools:ignore="UnusedAttribute"/>

            <ProgressBar
                android:id="@+id/mBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp"
                android:visibility="invisible"
                android:layout_alignLeft="@id/upload_btn"
                android:layout_alignStart="@id/upload_btn"
                android:layout_alignRight="@id/upload_btn"
                android:layout_alignEnd="@id/upload_btn"
                android:layout_alignTop="@id/upload_btn"
                android:layout_alignBottom="@id/upload_btn"
                />



        </RelativeLayout>


        <View
            android:id="@+id/upl_right"
            android:layout_width="32dp"
            android:layout_height="2dp"
            android:visibility="invisible"
            />





    </LinearLayout>





</RelativeLayout>