<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Activities.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:elevation="4dp"
            tools:targetApi="lollipop">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <ImageButton
                    android:layout_width="158dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="13dp"
                    android:paddingRight="13dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fnme"
                    tools:ignore="RtlSymmetry"
                    android:contentDescription="@string/logo__"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:titleTextColor="@color/colorPrimary"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="drawerToggle"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    app:srcCompat="@drawable/ic_menu"
                    android:contentDescription="@string/drawer_toggle_button"
                    />

                <com.miguelcatalan.materialsearchview.MaterialSearchView
                    android:id="@+id/material_search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar_id">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="-1dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="-1dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"

                />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <Button
            android:id="@+id/bottom_add_button"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_state_generic"
            android:clickable="true"
            android:drawableTop="@drawable/ic_add"
            android:focusable="true"
            android:onClick="addPerson"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add_missing_person"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="194dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/blue_bg"
                android:contentDescription="@string/drawer_header"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bg_stroke"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openDonationPage"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:text="@string/donate"
                android:textColor="@drawable/text_selector"
                app:layout_constraintBottom_toTopOf="@+id/textView_terms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="96dp"
                android:padding="4dp"
                android:text="@string/h_id"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:padding="4dp"
                android:text="@string/guest"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/textView_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="aboutApp"
                android:text="@string/about"
                android:textColor="@drawable/text_selector_generic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_out_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg_stroke"
                android:clickable="true"
                android:focusable="true"
                android:onClick="signOut"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:text="@string/sign_out_id"
                android:textColor="@drawable/text_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_id" />

            <TextView
                android:id="@+id/textView_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openTerms"
                android:text="@string/terms_of_service"
                android:textColor="@drawable/text_selector_generic"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/flag_transparent"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="yourUploadsPage"
                    android:paddingStart="24dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/your_uploads_tab"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/menu_btn_color"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry,UnusedAttribute"
                    tools:targetApi="m" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>