<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UploadsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/appBar_uploads"
        android:elevation="10dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_uploads"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/your_uploads"
            app:titleTextColor="@color/text_clr"
            />


    </com.google.android.material.appbar.AppBarLayout>






    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_uploads"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar_uploads"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="-1dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="-1dp"
        android:paddingTop="8dp"
        />

    <TextView
        android:id="@+id/uploadsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar_uploads"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_to_see_your_uploads"
        android:textSize="18sp"
        android:textAlignment="center"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/sign_in_button_upld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uploadsHeading"
        android:layout_centerInParent="true"
        android:text="@string/sign_in"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="7dp"
        android:paddingBottom="8dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@drawable/text_selector"
        android:background="@drawable/button_bg_stroke"
        android:visibility="invisible"
        />

</RelativeLayout>